--- a/mainapp/templates/mainapp/acsm.html
+++ b/mainapp/templates/mainapp/acsm.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load link_holders %}
 {% block content %}
+<div class="box_content_page">
     <div class="container" id="page-top">
 
         <button class="back__to__main">
@@ -111,4 +112,5 @@
         </button>
         <div class="line__otstup__inside__pages"></div>
     </div>
+</div>
 {% endblock  %}
