--- a/mainapp/templates/mainapp/includes/background-block.html
+++ b/mainapp/templates/mainapp/includes/background-block.html
@@ -23,7 +23,7 @@
                         Федеральным законом от 29 декабря 2012 г. N 273-ФЗ «Об образовании в Российской Федерации»</p>
 
                         <div class="online__zayavka__button">
-                            <button class="button__zayavka" data-toggle="modal" data-target="#modal-statement">Заявка на услуги</button>
+                            <button class="button__zayavka" data-toggle="modal" data-target="#modal-statement">Подать заявку</button>
                         </div>
                     </div>
                 </div>
