--- a/mainapp/templates/mainapp/includes/footer.html
+++ b/mainapp/templates/mainapp/includes/footer.html
@@ -4,17 +4,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-xl-4">
-                <div class="footer__logo">
-                    <img src="{% static 'img/logo_footer.png' %}" alt="">
+                <div class="logo_ac_footer">
+                    <img src="{% static 'img/logo_ac_footer.png' %}" alt="">
                 </div>
-                <p class="footer__naks__text">
-                    Организация является членом Саморегулируемой <br> организации Ассоциация «НАКС».
-                </p>
-                <div class="sasp__grey__logo">
+                <div class="description">
+                    Коллектив «Диагностики» из более чем 200 специалистов представляет собой очень удачное сочетание
+                    профессионалов с большим производственным опытом и способных молодых людей постоянно повышающих свою
+                    квалификацию.
                 </div>
-                <p class="sasp__grey__text">Организация допущена <br>
-                    к выполнению работ по аттестации <br>
-                    сварочного производства</p>
+
                 <a href="political.html" class="political__footer">Политика конфиденциальности</a>
                 <div class="line__footer__small"></div>
                 <div class="prava__footer">
@@ -48,16 +46,7 @@
                 </div>
 
                 <div class="spks__link__footer">
-                    <a href="http://www.spks.naks.ru" title="Совет по профессиональным квалификациям">
-                        <div class="spks"></div>
-                        <p class="spks__text">
-                            Совет <br>
-                            по профессиональным <br> квалификациям в области сварки
-                        </p>
-                        <p class="spks__footer">
-                            www.spks.naks.ru
-                        </p>
-                    </a>
+                   <img src="{% static 'img/spks__logo.png' %}" alt="">
                 </div>
             </div>
             <div class="col-md-3 col-xl-2">
@@ -74,7 +63,8 @@
                         <p class="adres__footer__text">455019, Челябинская область, <br> город Магнитогорск, улица <br>
                             Профсоюзная, дом 14, офис 111</p>
                         <div class="click__on__map_footer">
-                            <a data-fancybox="" data-options="" title="Открыть карту" href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9F%D1%80%D0%BE%D1%84%D1%81%D0%BE%D1%8E%D0%B7%D0%BD%D0%B0%D1%8F,+14,+%D0%9C%D0%B0%D0%B3%D0%BD%D0%B8%D1%82%D0%BE%D0%B3%D0%BE%D1%80%D1%81%D0%BA,+%D0%A7%D0%B5%D0%BB%D1%8F%D0%B1%D0%B8%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+455019/@53.3974046,59.0340087,18z/data=!3m1!4b1!4m5!3m4!1s0x43d12f82af4c55f9:0x1cb4da0de2b692ba!8m2!3d53.397403!4d59.035103">
+                            <a data-fancybox="" data-options="" title="Открыть карту"
+                                href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9F%D1%80%D0%BE%D1%84%D1%81%D0%BE%D1%8E%D0%B7%D0%BD%D0%B0%D1%8F,+14,+%D0%9C%D0%B0%D0%B3%D0%BD%D0%B8%D1%82%D0%BE%D0%B3%D0%BE%D1%80%D1%81%D0%BA,+%D0%A7%D0%B5%D0%BB%D1%8F%D0%B1%D0%B8%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+455019/@53.3974046,59.0340087,18z/data=!3m1!4b1!4m5!3m4!1s0x43d12f82af4c55f9:0x1cb4da0de2b692ba!8m2!3d53.397403!4d59.035103">
                                 Посмотреть на карте</a>
                         </div>
                     </div>
@@ -96,37 +86,16 @@
                     <p class="razrabotano">
                         Разработано в - НАКС Медиа
                     </p>
-                </div>
-            </div>
-            <div class="mob__version">
-                <div class="col-md-4 col-xl-4">
-
-                    <div class="mob__spks__link__footer">
-                        <a href="http://www.spks.naks.ru" title="Совет по профессиональным квалификациям">
-                            <div class="mob__spks"></div>
-                            <p class="mob__spks__text">
-                                Совет <br>
-                                по профессиональным <br> квалификациям в области сварки
-                            </p>
-                            <p class="web__spks__footer">
-                                www.spks.naks.ru
-                            </p>
-                        </a>
+                    <div class="mob__version">
+                            <a href="political.html" class="mob__political__footer">Политика конфиденциальности</a>
+                            <div class="mob__line__footer__small"></div>
+                            <div class="mob__prava__footer">
+                                © 1994 - 2019 ООО АЦ «НАКС Стандарт-Диагностика». Все права защищены.
+                            </div>
+                            <p class="mob__razrabotano">
+                                    Разработано в - НАКС Медиа
+                                </p>
                     </div>
-                    <div class="mob__sasp__grey__logo">
-                    </div>
-                    <p class="mob__sasp__grey__text">Организация допущена <br>
-                        к выполнению работ по аттестации <br>
-                        сварочного производства</p>
-                    <a href="political.html" class="mob__political__footer">Политика конфиденциальности</a>
-                    <p class="mob__razrabotano">
-                        Разработано в - НАКС Медиа
-                    </p>
-                    <div class="mob__line__footer__small"></div>
-                    <div class="mob__prava__footer">
-                        © 1994 - 2019 ООО АЦ «НАКС Стандарт-Диагностика». Все права защищены.
-                    </div>
-
                 </div>
             </div>
         </div>
