--- a/mainapp/templates/mainapp/includes/header.html
+++ b/mainapp/templates/mainapp/includes/header.html
@@ -34,14 +34,14 @@
                         </div>
                 </div>
                 <div class="col-md-5 col-sm-4 col-xl-3">
-                        <a href="http://www.naks.ru"></a>
-                        <p class="sasp__logo" title="Система Аттестации Сварочного Производства"></p>
-                        <p class="sasp__text">Организация допущена <br>
-                                к выполнению работ по аттестации <br>
-                                сварочного производства</p>
-                                <div class="mob__sasp">
+                        <div class="sasp_header_logo">
+                                <a href="http://www.naks.ru">
+                                        <img src="{% static 'img/sasp.png' %}" title="Организация допущена к выполнению работ по аттестации сварочного производства" alt=""></a>
+                                        <p class="sasp" title="Система Аттестации Сварочного Производства"></p>
+                        </div>
+                                                       <div class="mob__sasp">
                                                 <p class="mob__logo__sasp">
-                                                                <img src="{% static 'img/logo__sasp.png' %}" alt="">
+                                                                <img src="{% static 'img/sasp.png' %}" alt="">
                                                 </p>
                                                 <p class="mob__sasp__text">
                                                         Организация допущена <br>
