--- a/mainapp/templates/mainapp/profstandarti_new.html
+++ b/mainapp/templates/mainapp/profstandarti_new.html
@@ -3,6 +3,7 @@
 {% load link_holders %}
 {% block content %}
 
+  <div class="box_content_page">
     <div class="container" id="page-top">
 
         <button class="back__to__main">
@@ -66,9 +67,7 @@
         <div class="line__otstup__inside__pages"></div>
     </div>
 
-    {% comment %} <!-- End Include footer -->
-    <div w3-include-html="includes/footer.html"></div>
-    <!-- End Include footer --> {% endcomment %}
+  </div>
 
 
 {% endblock content %}
