--- a/assets/scss/_legacy.scss
+++ b/assets/scss/_legacy.scss
@@ -5,8 +5,6 @@ body {
     font-size: 12px;
     line-height: 1.5;
     background-color: #fff;
-    opacity: 0;
-    transition: .4s;
 }
 
 
@@ -14,6 +12,10 @@ body {
     .container {
         max-width: 1550px;
     }
+}
+
+.box_content_page {
+    padding: 45px 0px 45px;
 }
 
 .line__otstup__inside__pages {
@@ -26,6 +28,8 @@ body {
     background: transparent;
     font-size: 14px;
     padding: 0px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 
     a {
         text-decoration: none;
@@ -49,7 +53,6 @@ body {
 
 .box__items {
     @media screen and (max-width: 576px) {
-        vertical-align: middle;
         text-align: center;
     }
 }
@@ -156,14 +159,8 @@ body {
 }
 
 
-.sasp__logo::before {
-    content: '';
-    position: absolute;
-    width: 85px;
-    height: 45px;
-    left: 0;
-    margin-top: 20px;
-    background: url('../img/logo__sasp.png') center 0 no-repeat;
+.sasp_header_logo {
+    text-align: right;
 
     @media screen and (max-width: 576px) {
         display: none;
@@ -180,6 +177,7 @@ body {
 
     @media screen and (max-width: 576px) {
         display: block;
+        margin-top: 15px;
 
     }
 }
@@ -246,7 +244,6 @@ body {
     font-size: 36px;
     font-weight: 550;
     color: #000;
-    vertical-align: middle;
     text-align: center;
 }
 
@@ -254,7 +251,6 @@ body {
     font-size: 18px;
     font-weight: 450;
     color: #000;
-    vertical-align: middle;
     text-align: center;
     line-height: 1.8;
 
@@ -267,15 +263,13 @@ body {
     font-size: 16px;
     font-weight: 500;
     color: #000;
-    vertical-align: middle;
     text-align: center;
     color: #000000;
 }
 
 .bg__line {
-    border-bottom: 1px solid #3eb5f1;
+    border-bottom: 1px solid #005bbb;
     width: 50px;
-    vertical-align: middle;
     text-align: center;
     margin: auto;
     margin-bottom: 15px;
@@ -283,13 +277,12 @@ body {
 }
 
 .online__zayavka__button {
-    vertical-align: middle;
     text-align: center;
     margin-top: 15px;
 }
 
 .button__zayavka {
-    background-color: #3eb5f1;
+    background-color: #005bbb;
     border: none;
     border-radius: 3px;
     color: #fff;
@@ -299,12 +292,12 @@ body {
     cursor: pointer;
 
     &:hover {
-        background-color: #35a9e4;
+        background-color: #046edf;
         transition: 0.2s;
     }
 
     &:active {
-        background-color: #2891c5;
+        background-color: #014fa1;
         transition: 0.2s;
     }
 
@@ -319,7 +312,7 @@ body {
     color: #0173c1;
 
     &:hover {
-        color: #0087e0;
+        color: #005bbb;
     }
 }
 
@@ -421,7 +414,7 @@ body {
     background-color: #fcfcfc;
     transition: 0.2s;
     margin-left: 10px;
-    border-left: 1px solid rgb(39, 133, 255);
+    border-left: 1px solid #046edf;
 }
 
 .services__name {
@@ -452,11 +445,11 @@ body {
 
 .box__news {
     border: 1px solid #eeeeee;
-        padding: 25px;
+    padding: 25px;
 
     &:hover {
         box-shadow: 0 2px 18px rgba(27, 27, 27, 0.03);
-        border: 1px solid rgb(197, 222, 255);
+        border: 1px solid #046edf;
     }
 }
 
@@ -504,6 +497,7 @@ body {
     margin-bottom: 50px;
     background-color: #fff;
     padding: 25px;
+
     a {
         text-decoration: none;
     }
@@ -554,6 +548,7 @@ body {
     margin-bottom: 50px;
     background-color: #fff;
     padding: 25px;
+
     a {
         text-decoration: none;
     }
@@ -613,7 +608,8 @@ body {
 .mob__version {
     display: none;
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 760px) {
+        margin-top: 25px;
         display: block;
     }
 }
@@ -689,6 +685,11 @@ body {
     margin-top: 10px;
 }
 
+
+.description{
+    margin-bottom: 25px;
+}
+
 .web__spks__footer a {
     text-decoration: none;
     color: #696969;
@@ -740,8 +741,13 @@ body {
     }
 }
 
-.footer__logo {
+.logo_ac_footer {
     margin-bottom: 25px;
+
+    @media screen and (max-width: 320px) {
+        margin-top: 25px;
+    }
+
 }
 
 .sasp__grey__logo::before {
@@ -752,7 +758,7 @@ body {
     background: url('../img/logo__sasp_grey.png') center 0 no-repeat;
     margin-left: -5px;
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 760px) {
         display: none;
     }
 }
@@ -763,7 +769,7 @@ body {
     margin-top: 55px;
     margin-bottom: 45px;
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 760px) {
         display: none;
     }
 }
@@ -771,7 +777,7 @@ body {
 .political__footer {
     color: #000;
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 760px) {
         display: none;
     }
 }
@@ -782,7 +788,7 @@ body {
     margin-top: 20px;
     margin-bottom: 15px;
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 760px) {
         display: none;
     }
 }
@@ -791,7 +797,7 @@ body {
     font-size: 12px;
     color: #9c9c9c;
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 760px) {
         display: none;
     }
 }
@@ -825,33 +831,6 @@ body {
     margin: 0;
 }
 
-.spks::before {
-    content: '';
-    position: absolute;
-    width: 85px;
-    height: 45px;
-    background: url('../img/spks_logo.png') center 0 no-repeat;
-    margin-left: -20px;
-
-    @media screen and (max-width: 320px) {
-        display: none;
-    }
-
-}
-
-.spks__text {
-    font-size: 14px;
-    text-transform: uppercase;
-    color: #000;
-    margin-left: 65px;
-    font-weight: 500;
-    margin-bottom: 0;
-    text-decoration: none;
-
-    @media screen and (max-width: 320px) {
-        display: none;
-    }
-}
 
 .number__footer {
     font-size: 28px;
@@ -972,7 +951,7 @@ body {
     &:hover {
         background-color: #f5f5f5;
         transition: 0.2s;
-        border-left: 1px solid #2785ff;
+        border-left: 1px solid #046edf;
 
     }
 }
@@ -1193,7 +1172,7 @@ body {
 
 
 .button__zayavka__inside__pages {
-    background-color: #3eb5f1;
+    background-color: #005bbb;
     border: none;
     border-radius: 3px;
     color: #fff;
@@ -1205,12 +1184,12 @@ body {
     cursor: pointer;
 
     &:hover {
-        background-color: #35a9e4;
+        background-color: #046edf;
         transition: 0.2s;
     }
 
     &:active {
-        background-color: #2891c5;
+        background-color: #024ea0;
         transition: 0.2s;
     }
 
@@ -1237,197 +1216,198 @@ body {
     font-weight: 400;
 }
 
-// Upload Files
-//variables
-$file-uploader__primaryColor: rgb(114, 191, 167);
-$file-uploader__primaryColor--hover: lighten($file-uploader__primaryColor, 15%);
-$file-uploader__black: #242424;
-$file-uploader__error: rgb(214, 93, 56);
+// // Upload Files
+// //variables
+// $file-uploader__primaryColor: rgb(114, 191, 167);
+// $file-uploader__primaryColor--hover: lighten($file-uploader__primaryColor, 15%);
+// $file-uploader__black: #242424;
+// $file-uploader__error: rgb(214, 93, 56);
 
-//style
-.file-uploader {
-    border-radius: 3px;
-    color: $file-uploader__black;
-}
-
-.file-uploader__message-area {
-    font-size: 18px;
-    color: #000;
-    margin-bottom: 15px;
-}
-
-.file-list {
-    background-color: rgb(208, 255, 214);
-}
-
-.file-list__name {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.file-list li {
-    height: 50px;
-    line-height: 50px;
-    border: none;
-    overflow: hidden;
-    font-size: 18px;
-}
-
-.removal-button {
-    width: 20%;
-    border: none;
-    color: rgb(255, 255, 255);
-    background-color: rgb(255, 153, 153);
-
-    &:hover {
-        background-color: rgb(252, 129, 129);
-        transition: 0.2s;
-    }
-
-    &:active {
-        background-color: rgb(247, 100, 100);
-        transition: 0.2s;
-    }
-
-    cursor: pointer;
-
-    &::before {
-        content: '\2716';
-    }
-
-    &:focus {
-        outline: 0;
-    }
-}
-
-.file-chooser {
-    padding: 1em;
-    transition: background-color 1s, height 1s;
-    margin-top: 10px;
-    // & p {
-    //     font-size: 18px;
-    //     padding-top: 1em;
-    // }
-}
-
-//layout
-.file-uploader {
-    max-width: 400px;
-    height: auto;
-
-    & input[type=submit] {}
-}
-
-.file-list__name {
-    max-width: 70%;
-    float: left;
-}
-
-.file-list li {
-    @extend %clearfix;
-}
-
-.removal-button {
-    display: inline-block;
-    height: 100%;
-    float: right;
-}
-
-.file-chooser {
-    padding: 0;
-    background: transparent;
-}
-
-input[type=file] {
-    border: none;
-
-}
-
-
-.file-chooser__input {
-    margin: 0 auto;
-}
-
-.file-uploader__submit-button {
-    border-radius: 3px;
-    border: none;
-    margin-top: 15px;
-    color: white;
-    background-color: #8fb6f5;
-    padding: 10px 25px;
-    font-size: 16px;
-    cursor: pointer;
-
-    & input[type=submit] {
-        border: none;
-    }
-
-    &:focus {
-        box-shadow: none;
-        outline: none;
-    }
-
-    &:hover {
-        background-color: #325fa8;
-    }
-
-    &:active {
-        background-color: #254e8f;
-    }
-}
-
-//layout
+// //style
 // .file-uploader {
+//     border-radius: 3px;
+//     color: $file-uploader__black;
+// }
+
+// .file-uploader__message-area {
+//     font-size: 18px;
+//     color: #000;
+//     margin-bottom: 15px;
+// }
+
+// .file-list {
+//     background-color: rgb(208, 255, 214);
+// }
+
+// .file-list__name {
+//     white-space: nowrap;
+//     overflow: hidden;
+//     text-overflow: ellipsis;
+// }
+
+// .file-list li {
+//     height: 50px;
+//     line-height: 50px;
+//     border: none;
+//     overflow: hidden;
+//     font-size: 18px;
+// }
+
+// .removal-button {
+//     width: 20%;
+//     border: none;
+//     color: rgb(255, 255, 255);
+//     background-color: rgb(255, 153, 153);
+
+//     &:hover {
+//         background-color: rgb(252, 129, 129);
+//         transition: 0.2s;
+//     }
+
+//     &:active {
+//         background-color: rgb(247, 100, 100);
+//         transition: 0.2s;
+//     }
+
+//     cursor: pointer;
+
+//     &::before {
+//         content: '\2716';
+//     }
+
+//     &:focus {
+//         outline: 0;
+//     }
+// }
+
+// .file-chooser {
+//     padding: 1em;
+//     transition: background-color 1s, height 1s;
+//     margin-top: 10px;
+//     // & p {
+//     //     font-size: 18px;
+//     //     padding-top: 1em;
+//     // }
+// }
+
+// //layout
+// .file-uploader {
+//     max-width: 400px;
+//     height: auto;
+
+//     & input[type=submit] {}
+// }
+
+// .file-list__name {
+//     max-width: 70%;
+//     float: left;
+// }
+
+// .file-list li {
 //     @extend %clearfix;
 // }
 
-//utility
+// .removal-button {
+//     display: inline-block;
+//     height: 100%;
+//     float: right;
+// }
 
-%clearfix {
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-}
+// .file-chooser {
+//     padding: 0;
+//     background: transparent;
+// }
 
-.hidden {
-    display: none;
+// input[type=file] {
+//     border: none;
 
-    & input {
-        display: none;
-    }
-}
+// }
 
-.error {
-    background-color: $file-uploader__error;
-    color: white;
-}
 
-//reset
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
+// .file-chooser__input {
+//     margin: 0 auto;
+// }
+
+// .file-uploader__submit-button {
+//     border-radius: 3px;
+//     border: none;
+//     margin-top: 15px;
+//     color: white;
+//     background-color: #8fb6f5;
+//     padding: 10px 25px;
+//     font-size: 16px;
+//     cursor: pointer;
+
+//     & input[type=submit] {
+//         border: none;
+//     }
+
+//     &:focus {
+//         box-shadow: none;
+//         outline: none;
+//     }
+
+//     &:hover {
+//         background-color: #325fa8;
+//     }
+
+//     &:active {
+//         background-color: #254e8f;
+//     }
+// }
+
+// //layout
+// // .file-uploader {
+// //     @extend %clearfix;
+// // }
+
+// //utility
+
+// %clearfix {
+//     &:after {
+//         content: "";
+//         display: table;
+//         clear: both;
+//     }
+// }
+
+// .hidden {
+//     display: none;
+
+//     & input {
+//         display: none;
+//     }
+// }
+
+// .error {
+//     background-color: $file-uploader__error;
+//     color: white;
+// }
+
+// //reset
+// *,
+// *::before,
+// *::after {
+//     box-sizing: border-box;
+// }
 
 // О центре
 
-.link__inside__pages{
+.link__inside__pages {
     font-size: 18px;
     margin-bottom: 5px;
 }
 
-.grafik__work{
+.grafik__work {
     font-size: 16px;
     font-weight: 400;
-    p{
+
+    p {
         margin-bottom: 8px;
     }
 }
 
-.grafik__red{
+.grafik__red {
     font-size: 16px;
     font-weight: 400;
     color: red;
@@ -1442,22 +1422,82 @@ input[type=file] {
 
 // Contact page
 
-.contact__header__pages{
+.box_single_number{
+    color: #004085;
+    background-color: #cce5ff59;
+    border-color: #b8daff;
+    border-radius: 3px;
+    padding: 10px 15px;
+    a{
+        font-size: 24px;
+        font-weight: 450;
+        color: #005bbb;
+        text-decoration: none;
+    }
+}
+
+.consultant_number{
+font-size: 12px;
+margin-top: 5px;
+margin-bottom: 0px;
+}
+
+.box_contacti{
+    padding: 35px 0px;
+}
+
+.headline_contacti{
+margin-bottom: 25px;
+font-size: 22px;
+font-weight: 450;
+@media screen and (max-width: 320px) {
+    margin-top: 15px;
+    margin-bottom: 0px;
+}
+}
+
+.subtitle_contacti{
+    font-size: 18px;
+    font-weight: 450;
+    margin-bottom: 0px;
+    margin-bottom: 25px;
+}
+
+
+.name_contacti{
+    margin-top: 10px;
     font-size: 20px;
-    font-weight: 300;
-    color: #000;
-    margin-bottom: 15px;
+    font-weight: 450;  
+    color: #005bbb;
+}
+
+.position{
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+.phone_name{
+    font-size: 18px;
+    font-weight: 450;
     margin-top: 15px;
 }
 
-.contact__number{
-    font-size: 20px;
-    font-weight: 500;
+.line_contacti{
+    border: 0.5px solid #eeeeee;
+    margin-top: 15px;
 }
 
-.adres__ac{
-    font-size: 16px;
-    font-weight: 500;
+.email_contacti {
+    margin-top: 10px;
+a{
+    font-size: 14px;
+font-weight: 400;
+}
+}
+
+.contacti_adres{
+    font-size: 18px;
+    margin-bottom: 15px;
 }
 
 .ya__map {
@@ -1465,7 +1505,7 @@ input[type=file] {
 }
 
 // Новости (внутри)
-.header__news{
+.header__news {
     font-size: 24px;
     font-weight: 550;
     color: #000;
@@ -1474,12 +1514,12 @@ input[type=file] {
 }
 
 
-.img__box__news{
-   margin-top: 15px;
-   margin-bottom: 25px;
+.img__box__news {
+    margin-top: 15px;
+    margin-bottom: 25px;
 }
 
-.small__text__news{
+.small__text__news {
     max-width: 90%;
     font-size: 16px;
     font-weight: 400;
@@ -1488,12 +1528,12 @@ input[type=file] {
     line-height: 1.8;
 }
 
-.news__tag__all-news{
+.news__tag__all-news {
     margin-top: 25px;
     margin-bottom: 10px;
 }
 
-.news__tag__all-news a{
+.news__tag__all-news a {
     font-size: 14px;
     margin-top: 25px;
     background-color: transparent;
@@ -1503,13 +1543,14 @@ input[type=file] {
     width: 70px;
     color: #3164a2;
     margin-bottom: 5px;
-    &:hover{
+
+    &:hover {
         background-color: rgba(188, 218, 255, 0.1);
     }
 }
 
 
-.page-link{
+.page-link {
     color: #2e3e60;
     font-size: 14px;
     border-radius: 0px;
@@ -1517,10 +1558,10 @@ input[type=file] {
 }
 
 .page-item {
-border-radius: 0px;
+    border-radius: 0px;
 }
 
-.page-link:hover{
+.page-link:hover {
     transition: 0.2s;
 }
 
@@ -1530,12 +1571,12 @@ border-radius: 0px;
 }
 
 
-.date__news__inside{
-font-size: 14px;
-font-weight: 350;
-color: #5a5a5a;
-margin-top: 15px;
-margin-bottom: 15px;
+.date__news__inside {
+    font-size: 14px;
+    font-weight: 350;
+    color: #5a5a5a;
+    margin-top: 15px;
+    margin-bottom: 15px;
 
 }
 
@@ -1544,7 +1585,8 @@ margin-bottom: 15px;
     padding: 10px;
     cursor: pointer;
     margin-right: 5px;
-    &:hover{
+
+    &:hover {
         background-color: #027abb;
     }
 }
@@ -1555,7 +1597,8 @@ margin-bottom: 15px;
     padding: 10px;
     cursor: pointer;
     margin-right: 5px;
-    &:hover{
+
+    &:hover {
         background-color: #dd481b;
     }
 }
@@ -1566,7 +1609,8 @@ margin-bottom: 15px;
     padding: 10px;
     cursor: pointer;
     margin-right: 5px;
-    &:hover{
+
+    &:hover {
         background-color: #0b8bc7;
     }
 }
@@ -1576,21 +1620,23 @@ margin-bottom: 15px;
     background-color: #3f51b5;
     padding: 10px;
     cursor: pointer;
-    &:hover{
+
+    &:hover {
         background-color: #3647a7;
     }
 }
 
-.to__share{
-margin-bottom: 25px;
+.to__share {
+    margin-bottom: 25px;
 }
 
-.line__news__end{
+.line__news__end {
     border: 0.5px solid #ebebeb;
     margin-top: 25px;
     margin-bottom: 25px;
 }
-.prikrep__doc{
+
+.prikrep__doc {
     font-size: 14px;
     font-weight: 400;
     margin-bottom: 10px;
@@ -1600,7 +1646,8 @@ margin-bottom: 25px;
     background-color: transparent;
     border: none;
     padding: 0;
-    a{
+
+    a {
         text-decoration: none;
     }
 }
@@ -1613,7 +1660,7 @@ margin-bottom: 25px;
     color: #8d8d8d;
     border-radius: 3px;
 
-    &:hover{
+    &:hover {
         color: #585858;
     }
 }
@@ -1626,7 +1673,7 @@ margin-bottom: 25px;
     background-color: #f1f1f1;
 }
 
-.carousel__slide{
+.carousel__slide {
     margin-top: 15px;
     margin-bottom: 15px;
 }
@@ -1636,6 +1683,7 @@ margin-bottom: 25px;
     width: 21px;
     height: 34px;
 }
+
 .carousel-control-prev-icon {
     background: url(../img/next__image__arrow-01.png) no-repeat;
 }
@@ -1649,10 +1697,11 @@ margin-bottom: 25px;
     transform: rotate(180deg);
 }
 
-.box__news__inside__block{
+.box__news__inside__block {
     padding: 45px;
     background-color: #fcfcfc;
     margin-top: 30px;
+
     @media screen and (max-width: 320px) {
         padding: 15px;
     }
@@ -1662,7 +1711,7 @@ margin-bottom: 25px;
     white-space: normal;
 }
 
-.header__all__news{
+.header__all__news {
     font-size: 18px;
     font-weight: 300;
     margin-top: 25px;
@@ -1675,8 +1724,8 @@ margin-bottom: 25px;
 
 .link__read__news__inside {
     margin-top: 15px;
-     margin-bottom: 25px;
-     text-align: right;
+    margin-bottom: 25px;
+    text-align: right;
 }
 
 .link__read__news__inside a {
@@ -1688,7 +1737,7 @@ margin-bottom: 25px;
 
 
 // Нумерация
-.page-link{
+.page-link {
     color: #2e3e60;
     font-size: 14px;
     border-radius: 0px;
@@ -1696,11 +1745,11 @@ margin-bottom: 25px;
 }
 
 .page-item {
-border-radius: 0px;
-margin-top: 25px;
+    border-radius: 0px;
+    margin-top: 25px;
 }
 
-.page-link:hover{
+.page-link:hover {
     transition: 0.2s;
 }
 
@@ -1708,3 +1757,33 @@ margin-top: 25px;
     outline: none;
     box-shadow: none;
 }
+
+
+// Структура
+
+.struktura{
+    width: 1050px;;
+}
+
+.subtitle_struktura{
+    font-size: 16px;
+    font-weight: 350;
+    margin-top: 15px;
+}
+
+.box_struktura{
+    border: 0.5px solid #005abb59;
+    padding: 25px;
+    margin-bottom: 25px;
+    width: 250px;
+    height: 150px;
+}
+
+
+.name_struktura{
+    font-size: 14px;
+    font-weight: 450;
+    text-align: center;
+    vertical-align: middle;
+}
+
