--- a/assets/scss/_menu__burger.scss
+++ b/assets/scss/_menu__burger.scss
@@ -1,13 +1,13 @@
 // Меню
 .menu__background {
-    background-color: #373c41;
+    background-color: #005bbb;
     padding: 20px 35px 20px 35px;
     border-top: 1px solid #f5f5f5;
     // border-radius: 7px;
     // margin-bottom: 25px;
 
     @media screen and (max-width: 992px) {
-        padding: 15px;
+        padding: 15px 0px;
     }
 
 }
@@ -51,17 +51,17 @@
 }
 
 .dropdown-item{
-    padding: 12px;
+    padding: 10px;
 }
 
 .dropdown-menu {
-    margin-top: 22px;
+    margin-top: 25px;
     color: #ecf5fe;
     box-shadow: 0 2px 18px rgba(0, 0, 0, 0.09);
     border: none;
     border-radius: 0px;
     text-transform: initial;
-    padding: 12px;
+    padding: 7px;
        @media screen and (max-width: 320px) {
         font-size: 14px;
         color: #fff;
