--- a/mainapp/templates/mainapp/center.html
+++ b/mainapp/templates/mainapp/center.html
@@ -1,3 +1,4 @@
+<div class="box_content_page">
   <div class="container">
 
     <button class="back__to__main">
@@ -135,3 +136,5 @@
     </button>
     <div class="line__otstup__inside__pages"></div>
   </div>
+
+</div>
