--- a/mainapp/templates/mainapp/center_new.html
+++ b/mainapp/templates/mainapp/center_new.html
@@ -1,3 +1,4 @@
+<div class="box_content_page">
   <div class="container">
 
     <button class="back__to__main">
@@ -127,11 +128,11 @@
     </div>
 
 
-    <div class="line__otstup__inside__pages"></div>
-
     <button class="back__to__main">
       <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
         На главную</a>
     </button>
-    <div class="line__otstup__inside__pages"></div>
+
   </div>
+
+</div>
