--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -1,104 +1,180 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
 {% block content %}
+<div class="box_content_page">
   <div class="container" id="page-top">
 
     <button class="back__to__main">
-      <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
+      <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}"
+          class="arrow__back__to__main text-align-center" alt="">
         На главную</a>
     </button>
-
 
     <div class="row">
       <div class="col-xl-2">
         <div class="header__inside__pages">Контакты</div>
       </div>
-      <div class="col-xl-10">
-          <p class="header__doc">Группа компаний "Стандарт Диагностика"</p>
-          <p class="header__doc">Аттестационный центр ООО "НАКС Стандарт Диагностика"</p>
-      <p class="contact__header__pages">
-       </div>
-    </div>
-    <div class="row">
-        <div class="col-xl-2">
+      <div class="col-xl-4">
+        <div class="headline_contacti">
+          Группа компаний "Стандарт Диагностика"
         </div>
-        <div class="col-xl-3">
-                <p class="contact__header__pages">Телефоны
-          </p>
-          <p class="contact__number">
-              (3519) 58-09-07
-          </p>
-          <p class="contact__header__pages">Почта
-          <div class="email__block">
-                <a href="mailto:std-diag@diagmag.ru" class="email__link__footer">std-diag@diagmag.ru</a>
-                <p class="email__text__footer">Аттестация сварочных материалов,
-                    и сварочного оборудования.</p>
-                <a href="mailto:standbuh@diagmag.ru" class="email__link__footer">standbuh@diagmag.ru</a>
-                <p class="email__text__footer">Аттестация сварщиков и специалистов сварочного производства.
-                </p>
-                <a href="mailto:zolotoy_a@diagmag.ru" class="email__link__footer">zolotoy_a@diagmag.ru</a>
-                <p class="email__text__footer">Лаборатория неразрушающих и разрушающих методов контроля.</p>
-                <a href="mailto:sdiag@diagmag.ru" class="email__link__footer">sdiag@diagmag.ru</a>
-                <p class="email__text__footer">Аттестация сварочных материалов,
-                    и сварочного оборудования.</p>
+        <div class="position">
+          Общая информация
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xl-2 "></div>
+      <div class="col-xl-4">
+        <div class="box_contacti">
+          <div class="subtitle_contacti">Аттестационный центр ООО "НАКС Стандарт Диагностика"
+          </div>
+          <div class="box_single_number">
+            <a href="tel:(3519) 58-09-07">(3519) 58-09-07</a>
+            <p class="consultant_number">Многоканальный</p>
+          </div>
+      <div class="box_sotrudnik">
+          <div class="name_contacti">
+              Кормакова Елена Геннадьевна
             </div>
-        </div>
+            <div class="position">
+              Директор ООО «НАКС Стандарт-Диагностика»
+            </div>
+            <div class="phone_name">
+                Тел.(3519)58-09-33 (доб.401)
+            </div>            
+            <div class="line_contacti"></div>
+      </div>
+      <div class="box_sotrudnik">
+          <div class="name_contacti">
+              Золотая Яна Викторовна
+            </div>
+            <div class="position">
+                Руководитель СУР-22АЦ; СУР-3ЦСП
+            </div>
+            <div class="phone_name">
+                Тел.(3519)58-09-07 (доб.408)
+            </div>
+            <div class="email_contacti">
+              <a href="mailto:standbuh@diagmag.ru" title="Написать письмо">standbuh@diagmag.ru</a>
+            </div>
+            <div class="line_contacti"></div>
+      </div>
+      <div class="box_sotrudnik">
+          <div class="name_contacti">
+              Фоменко Александр Николаевич
+            </div>
+            <div class="position">
+                Руководитель АЦСТ-132
+            </div>
+            <div class="phone_name">
+                Тел.(3519)58-09-07 (доб.409)
+            </div>
+            <div class="email_contacti">
+              <a href="mailto:sdiag@diagmag.ru" title="Написать письмо">sdiag@diagmag.ru</a>
+            </div>
+            <div class="line_contacti"></div>
+      </div>
+      <div class="box_sotrudnik">
+          <div class="name_contacti">
+              Андреева Светлана Васильевна
+            </div>
+            <div class="position">
+                Руководитель АЦСМ-62; АЦСО-114
+            </div>
+            <div class="phone_name">
+                Тел.(3519)58-09-07 (доб.408)
+            </div>
+            <div class="email_contacti">
+              <a href="mailto:std-diag@diagmag.ru" title="Написать письмо">std-diag@diagmag.ru</a>
+            </div>
+            <div class="line_contacti"></div>
+      </div>
+      <div class="box_sotrudnik">
+          <div class="name_contacti">
+              Золотой Александр Андреевич
+            </div>
+            <div class="position">
+                Начальник испытательной лаборатории
+            </div>
+            <div class="phone_name">
+                Тел.(3519)58-09-07(доб.408)
+            </div>
+            <div class="email_contacti">
+              <a href="mailto:zolotoy_a@diagmag.ru" title="Написать письмо">zolotoy_a@diagmag.ru</a>
+            </div>
+            <div class="line_contacti"></div>
+      </div>
 
-        <div class="col-xl-4">
-                <p class="contact__header__pages">Адрес
-                    </p>
-                    <p class="adres__ac">
-                            г. Магнитогорск
-                            Профсоюзная, дом 14, офис 111
-                    </p>
-                    <p class="contact__header__pages">
-                            Наше местоположение
-                        </p>
-                        <div class="ya__map">
-                                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad62703690dc8660795097690647db22fb307a8230a1ddd42ed5d2eb25db377d1&amp;width=737&amp;height=497&amp;lang=ru_RU&amp;scroll=true"></script>
-                             </div>
-        </div>
-    </div>
-
-      <div class="row">
-        <div class="offset-xl-2 col-xl-6">
-          <p class="contact__header__pages">Контакты учебно-курсового центра</p>
-          <p class="header__doc">АНО ДПО «Стандарт – Диагностика»</p>
-          <p> Учебно-курсовой центр</p>
         </div>
       </div>
+      <div class="col-xl-1"></div>
+      <div class="col-xl-4">
+        <div class="box_contacti">
+          <div class="subtitle_contacti">АНО ДПО «Стандарт – Диагностика» <br> Учебно-курсовой центр
+          </div>
+          <div class="box_single_number">
+              <a href="tel:(3519) 58-09-33 ">(3519) 58-09-33 </a>
+              <p class="consultant_number">Многоканальный</p>
+            </div>
+      <div class="box_sotrudnik">
+          <div class="name_contacti">
+              Посадская Татьяна Семеновна 
+            </div>           
+            <div class="phone_name">
+                (оф.112) (доб. тел. 402)
+            </div>            
+            <div class="line_contacti"></div>
+      </div>
+      <div class="box_sotrudnik">
+          <div class="name_contacti">
+              Жаворонкова Елена Николаевна 
+            </div>           
+            <div class="phone_name">
+                (оф. 109) (доб. тел. 404)
+            </div>            
+            <div class="line_contacti"></div>
+      </div>
+      <div class="box_sotrudnik">
+          <div class="name_contacti">
+              Молчанова Наталья Николаевна 
+            </div>           
+            <div class="phone_name">
+                (оф. 102) (доб. тел. 405)
+            </div>            
+            <div class="line_contacti"></div>
+            <div class="email_contacti">
+                <a href="mailto:ukc@diagmag.ru" title="Написать письмо">ukc@diagmag.ru</a>
+              </div>
+      </div>
+  
+
+        </div>
+      </div>
+    </div>
+
     <div class="row">
-      <div class="offset-xl-2 col-xl-5">
-      <p class="adres__ac">455019, г. Магнитогорск, Челябинская обл., ул. Профсоюзная, 14 (1 этаж)</p>
-      <p class="email__text__footer">
-        E-mail: <a href="mailto:ukc@diagmag.ru" class="email__link__footer">ukc@diagmag.ru</a>
-      </p>
-      </div>
-      <div class="col-xl-5">
-
-        <p class="adres__ac">
-          Телефон (3519) 58-09-33 (многоканальный)
-        </p>
-
-      <div class="email__text__footer">
-        - Посадская Татьяна Семеновна (оф.112) (доб. тел. 402)
-      </div>
-      <div class="email__text__footer">
-        - Жаворонкова Елена Николаевна (оф. 109) (доб. тел. 404)
-      </div>
-      <p class="email__text__footer">
-        - Молчанова Наталья Николаевна (оф. 102) (доб. тел. 405)
-      </p>
+      <div class="col-xl-2"></div>
+      <div class="col-xl-10">
+          <p class="headline_contacti">
+              Наше местоположение
+          </p>
+          <div class="contacti_adres">
+              455019, г. Магнитогорск, Челябинская обл., ул. Профсоюзная, 14 (1 этаж)
+          </div>
+          <div class="ya__map">
+              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad62703690dc8660795097690647db22fb307a8230a1ddd42ed5d2eb25db377d1&amp;width=100%&amp;height=297&amp;lang=ru_RU&amp;scroll=true"></script>
+           </div>
       </div>
     </div>
-
-
-    <div class="line__otstup__inside__pages"></div>
 
     <button class="back__to__main">
-      <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
+      <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}"
+          class="arrow__back__to__main text-align-center" alt="">
         На главную</a>
     </button>
-    <div class="line__otstup__inside__pages"></div>
+
   </div>
+</div>
 {% endblock  %}
