--- a/mainapp/templates/mainapp/post_details.html
+++ b/mainapp/templates/mainapp/post_details.html
@@ -2,120 +2,122 @@
 {% load static %}
 
 {% block content %}
-<div class="container" id='page-top'>
+<div class="box_content_page">
+    <div class="container" id='page-top'>
 
-    <button class="back__to__main">
-        <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
-            На главную</a>
-    </button>
-
-
-    <div class="row">
-        <div class="col-xl-2">
-            <div class="header__inside__pages">Новости</div>
-        </div>
-
-
-        <div class="col-xl-8">
-            <div class="box__news__inside__block">
-                <div class="to__share">
-                    <a href="https://vk.com/share.php?url=https%3A%2F%2Ftech.yandex.ru%2Fshare%2F&title=%D0%91%D0%BB%D0%BE%D0%BA%20%C2%AB%D0%9F%D0%BE%D0%B4%D0%B5%D0%BB%D0%B8%D1%82%D1%8C%D1%81%D1%8F%C2%BB%20%E2%80%94%20%D0%A2%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81%D0%B0&utm_source=share2">
-                        <img src="{% static 'img/social__icon-01.png' %}" class="vkontakte" title="Поделиться Вконтакте" alt=""> </a>
-                    <a href="https://plus.google.com/share?url=http://ics-naks.ru/%d0%b1%d0%b5%d0%b7-%d1%80%d1%83%d0%b1%d1%80%d0%b8%d0%ba%d0%b8/nezavisimaya-ocenka-kvalifikacii-i-gosudarstvennaya-itogovaya-attestaciya-vypusknikov/"><img
-                            src="{% static 'img/social__icon-02.png' %}" title="Поделиться Google" class="googlepluse" alt=""> </a>
-                    <a href="https://twitter.com/intent/tweet?text=%D0%91%D0%BB%D0%BE%D0%BA%20%C2%AB%D0%9F%D0%BE%D0%B4%D0%B5%D0%BB%D0%B8%D1%82%D1%8C%D1%81%D1%8F%C2%BB%20%E2%80%94%20%D0%A2%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81%D0%B0&url=https%3A%2F%2Ftech.yandex.ru%2Fshare%2F&utm_source=share2">
-                        <img src="{% static 'img/social__icon-03.png' %}" title="Поделиться Twitter" class="twitter" alt=""> </a>
-                    <a href="https://www.facebook.com/sharer.php?src=sp&u=https%3A%2F%2Ftech.yandex.ru%2Fshare%2F&title=%D0%91%D0%BB%D0%BE%D0%BA%20%C2%AB%D0%9F%D0%BE%D0%B4%D0%B5%D0%BB%D0%B8%D1%82%D1%8C%D1%81%D1%8F%C2%BB%20%E2%80%94%20%D0%A2%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81%D0%B0&utm_source=share2"><img
-                            src="{% static 'img/social__icon-04.png' %}" title="Поделиться Facebook" class="facebook" alt=""> </a>
-                </div>
-                <p class="header__news">
-                    {{ post.title }}
-                </p>
-                <p class="date__news__inside">{{ post.published_date }}</p>
-
-                <div class="box__news__inside">
-                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            {% for image in images %}
-                            <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                                <img class="d-block w-100" src="{{ image.image.url }}" alt="image_{{ forloop.counter1 }}">
-                            </div>
-                            {% endfor %}
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
+        <button class="back__to__main">
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
+                На главную</a>
+        </button>
+    
+    
+        <div class="row">
+            <div class="col-xl-2">
+                <div class="header__inside__pages">Новости</div>
+            </div>
+    
+    
+            <div class="col-xl-8">
+                <div class="box__news__inside__block">
+                    <div class="to__share">
+                        <a href="https://vk.com/share.php?url=https%3A%2F%2Ftech.yandex.ru%2Fshare%2F&title=%D0%91%D0%BB%D0%BE%D0%BA%20%C2%AB%D0%9F%D0%BE%D0%B4%D0%B5%D0%BB%D0%B8%D1%82%D1%8C%D1%81%D1%8F%C2%BB%20%E2%80%94%20%D0%A2%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81%D0%B0&utm_source=share2">
+                            <img src="{% static 'img/social__icon-01.png' %}" class="vkontakte" title="Поделиться Вконтакте" alt=""> </a>
+                        <a href="https://plus.google.com/share?url=http://ics-naks.ru/%d0%b1%d0%b5%d0%b7-%d1%80%d1%83%d0%b1%d1%80%d0%b8%d0%ba%d0%b8/nezavisimaya-ocenka-kvalifikacii-i-gosudarstvennaya-itogovaya-attestaciya-vypusknikov/"><img
+                                src="{% static 'img/social__icon-02.png' %}" title="Поделиться Google" class="googlepluse" alt=""> </a>
+                        <a href="https://twitter.com/intent/tweet?text=%D0%91%D0%BB%D0%BE%D0%BA%20%C2%AB%D0%9F%D0%BE%D0%B4%D0%B5%D0%BB%D0%B8%D1%82%D1%8C%D1%81%D1%8F%C2%BB%20%E2%80%94%20%D0%A2%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81%D0%B0&url=https%3A%2F%2Ftech.yandex.ru%2Fshare%2F&utm_source=share2">
+                            <img src="{% static 'img/social__icon-03.png' %}" title="Поделиться Twitter" class="twitter" alt=""> </a>
+                        <a href="https://www.facebook.com/sharer.php?src=sp&u=https%3A%2F%2Ftech.yandex.ru%2Fshare%2F&title=%D0%91%D0%BB%D0%BE%D0%BA%20%C2%AB%D0%9F%D0%BE%D0%B4%D0%B5%D0%BB%D0%B8%D1%82%D1%8C%D1%81%D1%8F%C2%BB%20%E2%80%94%20%D0%A2%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D0%B8%20%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81%D0%B0&utm_source=share2"><img
+                                src="{% static 'img/social__icon-04.png' %}" title="Поделиться Facebook" class="facebook" alt=""> </a>
                     </div>
-
-                    <p class="small__text__news">
-                        {{ post.text|safe}}
+                    <p class="header__news">
+                        {{ post.title }}
                     </p>
-                    <div class="line__news__end"></div>
-                    {% if documents %}
-                    <p class="prikrep__doc">Прикрепленные файлы:</p>
-                    {% for document in documents %}
-                    <button class="soglashenie__button">
-                        <a href="{{ document.document.url }}" class="soglashenie__button__text" target="_blank">
-                            <img src="{% static 'img/download__icon.png' %}" alt="download" class="download__icon">{{ document.title }}</a>
-                    </button>
-                    {% endfor %}
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-    </div>
-
-{% if other_posts %}
-    <div class="row">
-        <div class="col-xl-2">
-        </div>
-        <div class="col-xl-4">
-            <p class="header__all__news">
-                Другие новости:
-            </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xl-2"></div>
-        <div class="col-xl-8">
-            <div class="row">
-
-                {% for post in other_posts %}
-                <div class="col-xl-6">
-                    <div class="block__news">
-                        <a href="{% url 'detailview' 'news_post' post.pk %}#page-top" class="link__news">
-                            <div class="box__news">
-                                <p class="data__news__main">{{ post.published_date }}</p>
-                                <p class="box__news__text">
-                                    {{ post.title }}</p>
+                    <p class="date__news__inside">{{ post.published_date }}</p>
+    
+                    <div class="box__news__inside">
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                {% for image in images %}
+                                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                                    <img class="d-block w-100" src="{{ image.image.url }}" alt="image_{{ forloop.counter1 }}">
+                                </div>
+                                {% endfor %}
                             </div>
-                        </a>
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+    
+                        <p class="small__text__news">
+                            {{ post.text|safe}}
+                        </p>
+                        <div class="line__news__end"></div>
+                        {% if documents %}
+                        <p class="prikrep__doc">Прикрепленные файлы:</p>
+                        {% for document in documents %}
+                        <button class="soglashenie__button">
+                            <a href="{{ document.document.url }}" class="soglashenie__button__text" target="_blank">
+                                <img src="{% static 'img/download__icon.png' %}" alt="download" class="download__icon">{{ document.title }}</a>
+                        </button>
+                        {% endfor %}
+                        {% endif %}
                     </div>
                 </div>
-                {% endfor %}
-
             </div>
-            {% comment %} <div class="line__otstup__inside__pages"></div> {% endcomment %}
-
         </div>
-
-
-
+    
+    {% if other_posts %}
+        <div class="row">
+            <div class="col-xl-2">
+            </div>
+            <div class="col-xl-4">
+                <p class="header__all__news">
+                    Другие новости:
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-2"></div>
+            <div class="col-xl-8">
+                <div class="row">
+    
+                    {% for post in other_posts %}
+                    <div class="col-xl-6">
+                        <div class="block__news">
+                            <a href="{% url 'detailview' 'news_post' post.pk %}#page-top" class="link__news">
+                                <div class="box__news">
+                                    <p class="data__news__main">{{ post.published_date }}</p>
+                                    <p class="box__news__text">
+                                        {{ post.title }}</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    {% endfor %}
+    
+                </div>
+                {% comment %} <div class="line__otstup__inside__pages"></div> {% endcomment %}
+    
+            </div>
+    
+    
+    
+        </div>
+    {% endif %}
+    
+    
+        <div class="line__otstup__inside__pages"></div>
+    
+        <button class="back__to__main">
+            <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
+                На главную</a>
+        </button>
+        <div class="line__otstup__inside__pages"></div>
     </div>
-{% endif %}
-
-
-    <div class="line__otstup__inside__pages"></div>
-
-    <button class="back__to__main">
-        <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
-            На главную</a>
-    </button>
-    <div class="line__otstup__inside__pages"></div>
 </div>
 {% endblock %}
