--- a/mainapp/templates/mainapp/reestr.html
+++ b/mainapp/templates/mainapp/reestr.html
@@ -1,7 +1,8 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
 {% block content %}
-  <div class="container">   
+<div class="box_content_page">
+    <div class="container">   
 
         <button class="back__to__main">
                 <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
@@ -383,5 +384,6 @@
                 alt=""> На главную</a>
     </button>
     <div class="line__otstup__inside__pages"></div>
+</div>
 </div>
 {% endblock  %}
